Allow theorems and proofs
Used this tutorial more or less to include theorem and proof
environments:

https://www.overleaf.com/learn/latex/theorems_and_proofs#Proofs

--- a/assignment.tex
+++ b/assignment.tex
@@ -22,7 +22,11 @@
 \usepackage{amsmath,amssymb,amsthm,textcomp}
 \usepackage{enumerate}
 \usepackage{multicol}
-\usepackage{tikz}
+%\usepackage{tikz}
+
+% Theorem / Proofs
+\usepackage{amsthm}
+\newtheorem{theorem}{Theorem}
 
 \usepackage{geometry}
 \geometry{left=25mm,right=25mm,%
