Comments and fix bugs

--- a/assignment.tex
+++ b/assignment.tex
@@ -116,7 +116,9 @@ bindingoffset=0mm, top=20mm,bottom=20mm}
 %%%%
 \newpage
 
+% ----------------------
 \section{Motivation}
+% ----------------------
 
 Motivated by the COVID-19 disease several outlets printed two-dimensional depictions of data which usually contained multidimensional datasets. These datasets usually compromise \{\textit{infections, recoverd, death}\} rates with regard to the \textit{country} and sometimes also the evolution over \textit{time}.\\
 
@@ -143,7 +145,9 @@ To investigate the quantification of visual quality mainly Tufte in 1983 in \tex
 
 \newpage
 
+% ----------------------
 \section{Problem Statement and State of the Art}
+% ----------------------
 
 \subsection{Problem statement and constraints}
 
@@ -208,7 +212,10 @@ To investigate the quantification of visual quality mainly Tufte in 1983 in \tex
 
 
 \newpage
+
+% ----------------------
 \section{Experimental validation}
+% ----------------------
 
 \begin{figure}[htp]
   \includegraphics[width=\textwidth,height=0.7\textheight,keepaspectratio]{assets/cost_functions.png}
@@ -236,9 +243,9 @@ Brath, Richard. "Metrics for effective information visualization." Proceedings o
 
 Tatu, Andrada, et al. "Visual quality metrics and human perception: an initial study on 2D projections of large multidimensional data." Proceedings of the International Conference on Advanced Visual Interfaces. 2010.\\
 
-Urribarri, D. K., & Castro, S. M. (2016). Prediction of data visibility in two-dimensional scatterplots. Information Visualization, 16(2), 113–125. doi:10.1177/1473871616638892\\
+Urribarri, D. K., \& Castro, S. M. (2016). Prediction of data visibility in two-dimensional scatterplots. Information Visualization, 16(2), 113–125. doi:10.1177/1473871616638892\\
 
-Coeurjolly, D., Miguet, S., & Tougne, L. (2004). 2D and 3D visibility in discrete geometry: an application to discrete geodesic paths. Pattern Recognition Letters, 25(5), 561–570. doi:10.1016/j.patrec.2003.12.002\\
+Coeurjolly, D., Miguet, S., \& Tougne, L. (2004). 2D and 3D visibility in discrete geometry: an application to discrete geodesic paths. Pattern Recognition Letters, 25(5), 561–570. doi:10.1016/j.patrec.2003.12.002\\
 
 Yang-Peláez J and Flowers WC. Information content
 measures of visual displays. In: Proceedings of the IEEE symposium on information vizualization 2000 (INFOVIS’00), 2000, pp. 99–103. Washington, DC: IEEE Computer Society.
