Optimality for pie-chart alg (theorem)

--- a/assignment.tex
+++ b/assignment.tex
@@ -190,6 +190,27 @@ To investigate the quantification of visual quality mainly Tufte in 1983 in \tex
   \item MaxMinMinK/relative
 \end{enumerate}
 
+\subsection{Optimalitaet fuer Pie Chart}
+
+Sei $ D $ eine endl. Menge und fuer $ d \in D $ und $ S \subseteq D$ die Funktion $ \phi(d, S) \mapsto \Re_{\geq 0}$ mit der Eigenschaft, dass fuer jedes $d \in D$ $S' \subseteq S => \phi(d, S') \geq \phi(d, S)$.
+
+Eine Stacking-Order $\pi$ ist eine Bijektion $\pi: \{1,...,n\} \mapsto D$.
+
+\begin{theorem}
+  
+Der Algorithmus 
+
+\begin{verbatim}
+ALG(endl. Menge D) {
+  x := argmax_{d \in D} \phi(d, D \setminus {d})
+  return [x, ALG(D \setminus {x})]
+}
+\end{verbatim}
+
+gibt eine Stacking-Order aus, die $min_{d \in D} \phi(d, \{d\ \in D | d' > d\})$ maximiert.
+\end{theorem}
+
+
 \begin{enumerate}
   \item Rotation
   \item Physics/Heuristics based approaches
