Clean up warnings and remove proof pictures

--- a/main.tex
+++ b/main.tex
@@ -208,17 +208,6 @@ gibt eine Stacking-Order aus, die $min_{d \in D} \phi(d, \{d\ \in D | d' > d\})$
   \caption{Trennlinienproblem}
 \end{figure}
 
-\begin{figure}[htp]
-  \includegraphics[width=\textwidth,height=\textheight,keepaspectratio]{assets/david_proof1.jpg}
-  \caption{Beweis Trennlinienalgo 1/2}
-\end{figure}
-
-\begin{figure}[htp]
-  \includegraphics[width=\textwidth,height=\textheight,keepaspectratio]{assets/david_proof2.jpg}
-  \caption{Beweis Trennlinienalgo 2/2}
-\end{figure}
-
-
 \newpage
 
 % ----------------------
@@ -255,7 +244,7 @@ Urribarri, D. K., \& Castro, S. M. (2016). Prediction of data visibility in two-
 
 Coeurjolly, D., Miguet, S., \& Tougne, L. (2004). 2D and 3D visibility in discrete geometry: an application to discrete geodesic paths. Pattern Recognition Letters, 25(5), 561–570. doi:10.1016/j.patrec.2003.12.002\\
 
-Yang-Peláez J and Flowers WC. Information content
+Yang-Pelaez J and Flowers WC. Information content
 measures of visual displays. In: Proceedings of the IEEE symposium on information vizualization 2000 (INFOVIS’00), 2000, pp. 99–103. Washington, DC: IEEE Computer Society.
 
 
