--- a/main.tex
+++ b/main.tex
@@ -26,6 +26,15 @@
 bindingoffset=0mm, top=20mm,bottom=20mm}
 \linespread{1.3}
 
+% Todo notes
+\usepackage{xargs}
+\usepackage[colorinlistoftodos,prependcaption,textsize=tiny]{todonotes}
+\newcommandx{\unsure}[2][1=]{\todo[linecolor=red,backgroundcolor=red!25,bordercolor=red,#1]{#2}}
+\newcommandx{\change}[2][1=]{\todo[linecolor=blue,backgroundcolor=blue!25,bordercolor=blue,#1]{#2}}
+\newcommandx{\info}[2][1=]{\todo[linecolor=OliveGreen,backgroundcolor=OliveGreen!25,bordercolor=OliveGreen,#1]{#2}}
+\newcommandx{\improvement}[2][1=]{\todo[linecolor=Plum,backgroundcolor=Plum!25,bordercolor=Plum,#1]{#2}}
+\newcommandx{\thiswillnotshow}[2][1=]{\todo[disable,#1]{#2}}
+
 % my own titles
 \makeatletter
 \renewcommand{\maketitle}{
@@ -186,8 +195,9 @@ ALG(finite set D) {
 }
 \end{verbatim}
 
-returns a stacking-order, which maximizes $min_{d \in D} \phi(d, \{d\ \in D | d' > d\})$. \textbf{Roland: shouldn't it be minimizes?}
+returns a stacking-order, which maximizes $min_{d \in D} \phi(d, \{d\ \in D | d' > d\})$.
 \end{theorem}
+\unsure{Roland: shouldn't it be 'minimizes'?}
 
 \begin{proof}
   Given an optimal Stacking-Order $s$ and output of ALG $s^*$ .
